src/driver/ajinextek/AXL(Library)/Visual Basic/AXDev.bas


    ' 지정한 SIIIH Slave 모듈에 네트웍 명령의 결과를 기입하고 반환 한다.
    Public Declare Function AxdSetAndGetSlaveCmdResult Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef tagSetCommand As Long, ByRef tagGetCommand As Long) As Long
    Public Declare Function AxaSetAndGetSlaveCmdResult Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef tagSetCommand As Long, ByRef tagGetCommand As Long) As Long
    Public Declare Function AxcSetAndGetSlaveCmdResult Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef tagSetCommand As Long, ByRef tagGetCommand As Long) As Long

    ' DPRAM 데이터를 확인한다.
    Public Declare Function AxlGetDpRamData Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wAddress As Long, ByRef dwpRdData As Long) As Long
    ' DPRAM 데이터를 Word단위로 확인한다.
    Public Declare Function AxlBoardReadDpramWord Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wOffset As Long, ByRef dwpRdData As Long) As Long
    ' DPRAM 데이터를 Word단위로 설정한다.
    Public Declare Function AxlBoardWriteDpramWord Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal wOffset As Long, ByVal dwWrData As Long) As Long

    ' 각 보드의 각 SLAVE별로 명령을 전송한다.
    Public Declare Function AxlSetSendBoardEachCommand Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwCommand As Long, ByRef dwpSendData As Long, ByVal dwLength As Long) As Long
    ' 각 보드로 명령을 전송한다.
    Public Declare Function AxlSetSendBoardCommand Lib "AXL.dll" (ByVal lBoardNo As Long, ByVal dwCommand As Long, ByRef dwpSendData As Long, ByVal dwLength As Long) As Long
    ' 각 보드의 응답을 확인한다.
    Public Declare Function AxlGetResponseBoardCommand Lib "AXL.dll" (ByVal lBoardNo As Long, ByRef dwpReadData As Long) As Long

    ' Network Type Master 보드에서 Slave 들의 Firmware Version을 읽어 오는 함수.
    ' ucaFirmwareVersion unsigned char 형의 Array로 선언하고 크기가 4이상이 되도록 선언 해야 한다.
    Public Declare Function AxmInfoGetFirmwareVersion Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef ucaFirmwareVersion As Long) As Long
    Public Declare Function AxaInfoGetFirmwareVersion Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef ucaFirmwareVersion As Long) As Long
    Public Declare Function AxdInfoGetFirmwareVersion Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef ucaFirmwareVersion As Long) As Long
    Public Declare Function AxcInfoGetFirmwareVersion Lib "AXL.dll" (ByVal lModuleNo As Long, ByRef ucaFirmwareVersion As Long) As Long

    '======== PCI-R1604-MLII 전용 함수===========================================================================
    ' INTERPOLATE and LATCH Command의 Option Field의 Torq Feed Forward의 값을 설정 하도록 합니다.
    ' 기본값은 MAX로 설정되어 있습니다.
    ' 설정값은 0 ~ 4000H까지 설정 할 수 있습니다.
    ' 설정값은 4000H이상으로 설정하면 설정은 그 이상으로 설정되나 동작은 4000H값이 적용 됩니다.
    Public Declare Function AxmSetTorqFeedForward Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwTorqFeedForward As Long) As Long

    ' INTERPOLATE and LATCH Command의 Option Field의 Torq Feed Forward의 값을 읽어오는 함수 입니다.
    ' 기본값은 MAX로 설정되어 있습니다.
    Public Declare Function AxmGetTorqFeedForward Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpTorqFeedForward As Long) As Long

    ' INTERPOLATE and LATCH Command의 VFF Field의 Velocity Feed Forward의 값을 설정 하도록 합니다.
    ' 기본값은 '0'로 설정되어 있습니다.
    ' 설정값은 0 ~ FFFFH까지 설정 할 수 있습니다.
    Public Declare Function AxmSetVelocityFeedForward Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwVelocityFeedForward As Long) As Long

    ' INTERPOLATE and LATCH Command의 VFF Field의 Velocity Feed Forward의 값을 읽어오는 함수 입니다.
    Public Declare Function AxmGetVelocityFeedForward Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpVelocityFeedForward As Long) As Long

    ' Encoder type을 설정한다.
    ' 기본값은 0(TYPE_INCREMENTAL)로 설정되어 있습니다.
    ' 설정값은 0 ~ 1까지 설정 할 수 있습니다.
    ' 설정값 : 0(TYPE_INCREMENTAL), 1(TYPE_ABSOLUTE).
    Public Declare Function AxmSignalSetEncoderType Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwEncoderType As Long) As Long

    ' Encoder type을 확인한다.
    Public Declare Function AxmSignalGetEncoderType Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpEncoderType As Long) As Long
    '========================================================================================================

    ' Slave Firmware Update를 위해 추가
    'DWORD   __stdcall AxmSetSendAxisCommand(long lAxisNo, WORD wCommand, WORD* wpSendData, WORD wLength);

    '======== PCI-R1604-RTEX, RTEX-PM 전용 함수==============================================================
    ' 범용 입력 2,3번 입력시 JOG 구동 속도를 설정한다.
    ' 구동에 관련된 모든 설정(Ex, PulseOutMethod, MoveUnitPerPulse 등)들이 완료된 이후 한번만 실행하여야 한다.
    Public Declare Function AxmMotSetUserMotion Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVelocity As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Long

    ' 범용 입력 2,3번 입력시 JOG 구동 동작 사용 가부를 설정한다.
    ' 설정값 :  0(DISABLE), 1(ENABLE)
    Public Declare Function AxmMotSetUserMotionUsage Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwUsage As Long) As Long

    ' MPGP 입력을 사용하여 Load/UnLoad 위치를 자동으로 이동하는 기능 설정.
    Public Declare Function AxmMotSetUserPosMotion Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dVelocity As Double, ByVal dAccel As Double, ByVal dDecel As Double, ByVal dLoadPos As Double, ByVal dUnLoadPos As Double, ByVal dwFilter As Long, ByVal dwDelay As Long) As Long

    ' MPGP 입력을 사용하여 Load/UnLoad 위치를 자동으로 이동하는 기능 설정.
    ' 설정값 :  0(DISABLE), 1(Position 기능 A 사용), 2(Position 기능 B 사용)
    Public Declare Function AxmMotSetUserPosMotionUsage Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwUsage As Long) As Long
    '========================================================================================================

    '======== SIO-CN2CH/HPC4, 절대 위치 트리거 기능 모듈 전용 함수================================================
    ' 메모리 데이터 쓰기 함수
    Public Declare Function AxcKeWriteRamDataAddr Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwAddr As Long, ByVal dwData As Long) As Long
    ' 메모리 데이터 읽기 함수
    Public Declare Function AxcKeReadRamDataAddr Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwAddr As Long, ByRef dwpData As Long) As Long
    ' 메모리 초기화 함수
    Public Declare Function AxcKeResetRamDataAll Lib "AXL.dll" (ByVal lModuleNo As Long, ByVal dwData As Long) As Long
    ' 트리거 타임 아웃 설정 함수
    Public Declare Function AxcTriggerSetTimeout Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwTimeout As Long) As Long
    ' 트리거 타임 아웃 확인 함수
    Public Declare Function AxcTriggerGetTimeout Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpTimeout As Long) As Long
    ' 트리거 대기 상태 확인 함수
    Public Declare Function AxcStatusGetWaitState Lib "AXL.dll" (ByVal lChannelNo As Long, ByRef dwpState As Long) As Long
    ' 트리거 대기 상태 설정 함수
    Public Declare Function AxcStatusSetWaitState Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwState As Long) As Long

    ' 지정 채널에 명령어 기입.
    Public Declare Function AxcKeSetCommandData32 Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwCommand As Long, ByVal dwData As Long) As Long
    ' 지정 채널에 명령어 기입.
    Public Declare Function AxcKeSetCommandData16 Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwCommand As Long, ByVal wData As Long) As Long
    ' 지정 채널의 레지스터 확인.
    Public Declare Function AxcKeGetCommandData32 Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwCommand As Long, ByRef dwpData As Long) As Long
    ' 지정 채널의 레지스터 확인.
    Public Declare Function AxcKeGetCommandData16 Lib "AXL.dll" (ByVal lChannelNo As Long, ByVal dwCommand As Long, ByRef wpData As Long) As Long
    '========================================================================================================

    '======== PCI-N804/N404 전용, Sequence Motion ===================================================================
    ' Sequence Motion의 축 정보를 설정 합니다. (최소 1축)
    ' lSeqMapNo : 축 번호 정보를 담는 Sequence Motion Index Point
    ' lSeqMapSize : 축 번호 갯수
    ' long* LSeqAxesNo : 축 번호 배열
    Public Declare Function AxmSeqSetAxisMap Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByVal lSeqMapSize As Long, ByRef lSeqAxesNo As Long) As Long
    Public Declare Function AxmSeqGetAxisMap Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByRef lSeqMapSize As Long, ByRef lSeqAxesNo As Long) As Long

    ' Sequence Motion의 기준(Master) 축을 설정 합니다.
    ' 반드시 AxmSeqSetAxisMap(...) 에 설정된 축 내에서 설정하여야 합니다.
    Public Declare Function AxmSeqSetMasterAxisNo Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByVal lMasterAxisNo As Long) As Long

    ' Sequence Motion의 Node 적재 시작을 라이브러리에 알립니다.
    Public Declare Function AxmSeqBeginNode Lib "AXL.dll" (ByVal lSeqMapNo As Long) As Long

    ' Sequence Motion의 Node 적재 종료를 라이브러리에 알립니다.
    Public Declare Function AxmSeqEndNode Lib "AXL.dll" (ByVal lSeqMapNo As Long) As Long

    ' Sequence Motion의 구동을 시작 합니다.
    Public Declare Function AxmSeqStart Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByVal dwStartOption As Long) As Long

    ' Sequence Motion의 각 Profile Node 정보를 라이브러리에 입력 합니다.
    ' 만약 1축 Sequence Motion을 사용하더라도, *dPosition는 1개의 Array로 지정하여 주시기 바랍니다.
    Public Declare Function AxmSeqAddNode Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByRef dPosition As Double, ByVal dVelocity As Double, ByVal dAcceleration As Double, ByVal dDeceleration As Double, ByVal dNextVelocity As Double) As Long

    ' Sequence Motion이 구동 시 현재 실행 중인 Node Index를 알려 줍니다.
    Public Declare Function AxmSeqGetNodeNum Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByRef lCurNodeNo As Long) As Long

    ' Sequence Motion의 총 Node Count를 확인 합니다.
    Public Declare Function AxmSeqGetTotalNodeNum Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByRef lTotalNodeCnt As Long) As Long

    ' Sequence Motion이 현재 구동 중인지 확인 합니다.
    ' dwInMotion : 0(구동 종료), 1(구동 중)
    Public Declare Function AxmSeqIsMotion Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByRef dwInMotion As Long) As Long

    ' Sequence Motion의 Memory를 Clear 합니다.
    ' AxmSeqSetAxisMap(...), AxmSeqSetMasterAxisNo(...) 에서 설정된 값은 유지됩니다.
    Public Declare Function AxmSeqWriteClear Lib "AXL.dll" (ByVal lSeqMapNo As Long) As Long

    ' Sequence Motion의 구동을 종료 합니다.
    ' dwStopMode : 0(EMERGENCY_STOP), 1(SLOWDOWN_STOP)
    Public Declare Function AxmSeqStop Lib "AXL.dll" (ByVal lSeqMapNo As Long, ByVal dwStopMode As Long) As Long
    '========================================================================================================


    '======== PCIe-Rxx04-SIIIH 전용 함수==========================================================================
    ' (SIIIH, MR_J4_xxB, Para : 0 ~ 8) ==
    '     [0] : Command Position
    '     [1] : Actual Position
    '     [2] : Actual Velocity
    '     [3] : Mechanical Signal
    '     [4] : Regeneration load factor(%)
    '     [5] : Effective load factor(%)
    '     [6] : Peak load factor(%)
    '     [7] : Current Feedback
    '     [8] : Command Velocity
    Public Declare Function AxmStatusSetMon Lib "AXL.dll" (ByVal lAxisNo As Long, ByVal dwParaNo1 As Long, ByVal dwParaNo2 As Long, ByVal dwParaNo3 As Long, ByVal dwParaNo4 As Long, ByVal dwUse As Long) As Long
    Public Declare Function AxmStatusGetMon Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpParaNo1 As Long, ByRef dwpParaNo2 As Long, ByRef dwpParaNo3 As Long, ByRef dwpParaNo4 As Long, ByRef dwpUse As Long) As Long
    Public Declare Function AxmStatusReadMon Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef dwpParaNo1 As Long, ByRef dwpParaNo2 As Long, ByRef dwpParaNo3 As Long, ByRef dwpParaNo4 As Long, ByRef dwDataVaild As Long) As Long
    Public Declare Function AxmStatusReadMonEx Lib "AXL.dll" (ByVal lAxisNo As Long, ByRef lpDataCnt As Long, ByRef dwpReadData As Long) As Long
    '=============================================================================================================
